--- a/Projekte/Dev/.project
+++ b/Projekte/Dev/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Dev</name>
+	<name>OSA-Dev</name>
 	<comment></comment>
 	<projects>
 	</projects>
