--- a/Projekte/Interfaces/.project
+++ b/Projekte/Interfaces/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Interfaces</name>
+	<name>OSA-Interfaces</name>
 	<comment></comment>
 	<projects>
 	</projects>
