--- a/Projekte/JavaAPI/.project
+++ b/Projekte/JavaAPI/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>JavaAPI</name>
+	<name>OSA-JavaAPI</name>
 	<comment></comment>
 	<projects>
 	</projects>
