--- a/Projekte/Objektorientiert/.project
+++ b/Projekte/Objektorientiert/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Objektorientiert</name>
+	<name>OSA-Objektorientiert</name>
 	<comment></comment>
 	<projects>
 	</projects>
