--- a/Projekte/Wdh/.project
+++ b/Projekte/Wdh/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Wdh</name>
+	<name>OSA-Wdh</name>
 	<comment></comment>
 	<projects>
 	</projects>
